@@ -613,8 +613,8 @@ int loadConfigFile (const char *configFile, config_file_t *config)
 int loadSystemConfig(config_file_t *config)
 {
 	char *dirspec[] = {
-		"/Library/Preferences/SystemConfiguration/com.apple.Boot.plist",
 		"/OS X Install Data/com.apple.Boot.plist",
+		"/Library/Preferences/SystemConfiguration/com.apple.Boot.plist",
 	};
 
 	int i, fd, count, ret=-1;
